Remove most usage of org.apache.commons.io
We should refactor from java.io.File to java.nio.file.Path in many places